--- a/index.html
+++ b/index.html
@@ -11,5 +11,7 @@
 		<div class="chart">
 		</div>
 		<script type="text/javascript" src="app.js"></script>
+		<br>
+		<p>This visualization shows that their is a strong correlation between education level and poverty. States that have a higher % of their population with no high school education, tend to have overall higher poverty levels.</p> 
   </body>
 </html>
